Fixed problems related to seminar 4
Co-authored-by: DjFluff <DjFluff@users.noreply.github.com>
Co-authored-by: Ainrave <Ainraven@users.noreply.github.com>